--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,19 +12,19 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    build: ./backend/
+    image: kamilisx/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/media/
   frontend:
     env_file: .env
-    build: ./frontend/
+    image: kamilisx/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
   gateway:
-    build: ./nginx/
+    image: kamilisx/kittygram_gateway
     env_file: .env
     ports:
       - 9000:80
