--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,24 +8,28 @@ volumes:
 services:
   db:
     image: postgres:13
-    env_file: .env
+    env_file: 
+      - .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     image: kamilisx/kittygram_backend
-    env_file: .env
+    env_file:
+      - .env
     volumes:
       - static:/backend_static
       - media:/media/
   frontend:
-    env_file: .env
+    env_file:
+      - .env
     image: kamilisx/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
   gateway:
     image: kamilisx/kittygram_gateway
-    env_file: .env
+    env_file:
+      - .env
     ports:
       - 9000:80
     volumes:
